# Plottings-Tutorial

./: .gitignore  README.md  pyproject.toml
notebooks/: matplotlib1.ipynb  matplotlib2.ipynb  seaborn1.ipynb  seaborn2.ipynb
